@@ -12,6 +12,8 @@
   * Fixed -list weight and the options for -weight.
   * Added fontFamily, fontStyle, fontWeight and textUnderColor to the Image
     class of Magick++.
+  * Fixed reading Photoshop layers of LSB TIFF files (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=28045).
 
 2015-07-25  6.9.1-10 Cristy  <quetzlzacatenango@image...>
   * New version 6.9.1-10, SVN revision 19269.
